--- a/configs/phoenix2014-T.yaml
+++ b/configs/phoenix2014-T.yaml
@@ -1,4 +1,4 @@
-dataset_root: ./dataset/phoenix2014-T
+dataset_root: ./dataset/PHOENIX-2014-T
 dict_path: ./preprocess/phoenix2014-T/gloss_dict.npy
 evaluation_dir: ./evaluation/slr_eval
 evaluation_prefix: phoenix2014-T-groundtruth
